--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
         at: .
     - run: ln -s .build/linux-amd64/prom2json prom2json
     - run: make docker
-    - run: make docker DOCKER_REPO=quay.io/prom2json
+    - run: make docker DOCKER_REPO=quay.io/prometheus
     - run: docker images
     - run: docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
     - run: docker login -u $QUAY_LOGIN -p $QUAY_PASSWORD quay.io
