--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,9 +79,11 @@ jobs:
         if [[ "$CIRCLE_TAG" =~ ^v[0-9]+(\.[0-9]+){2}$ ]]; then
           make docker-tag-latest DOCKER_IMAGE_TAG="$CIRCLE_TAG"
           make docker-tag-latest DOCKER_IMAGE_TAG="$CIRCLE_TAG" DOCKER_REPO=quay.io/prom2json
+          make docker-publish DOCKER_IMAGE_TAG="latest"
+          make docker-publish DOCKER_IMAGE_TAG="latest" DOCKER_REPO=quay.io/prometheus
         fi
-    - run: make docker-publish
-    - run: make docker-publish DOCKER_REPO=quay.io/prom2json
+    - run: make docker-publish DOCKER_IMAGE_TAG="$CIRCLE_TAG"
+    - run: make docker-publish DOCKER_REPO=quay.io/prom2json DOCKER_IMAGE_TAG="$CIRCLE_TAG"
 
 workflows:
   version: 2
