--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,89 +1,22 @@
 ---
 version: 2.1
 
-executors:
-  # Whenever the Go version is updated here, .travis.yml and .promu.yml
-  # should also be updated.
-  golang:
+orbs:
+  prometheus: prometheus/prometheus@0.1.0
+
+jobs:
+  test:
+    # Whenever the Go version is updated here, .travis.yml and .promu.yml
+    # should also be updated.
     docker:
     - image: circleci/golang:1.12
     working_directory: /go/src/github.com/prometheus/prom2json
 
-jobs:
-  test:
-    executor: golang
-
     steps:
-    - checkout
-    - run: make promu
+    - prometheus/setup_environment
     - run: make
-    - run: git diff --exit-code
-    - store_artifacts:
-        path: prom2json
-        destination: /build/prom2json
-    - run: rm -v prom2json
-
-  build:
-    machine: true
-
-    steps:
-    - checkout
-    - run: make promu
-    - run: promu crossbuild -v
-    - persist_to_workspace:
-        root: .
-        paths:
-        - .build
-    - store_artifacts:
-        path: .build
-        destination: /build
-
-  docker_hub_master:
-    executor: golang
-
-    steps:
-    - checkout
-    - setup_remote_docker
-    - attach_workspace:
-        at: .
-    - run: ln -s .build/linux-amd64/prom2json prom2json
-    - run: make docker
-    - run: make docker DOCKER_REPO=quay.io/prometheus
-    - run: docker images
-    - run: docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-    - run: docker login -u $QUAY_LOGIN -p $QUAY_PASSWORD quay.io
-    - run: make docker-publish
-    - run: make docker-publish DOCKER_REPO=quay.io/prometheus
-
-  docker_hub_release_tags:
-    executor: golang
-
-    steps:
-    - checkout
-    - setup_remote_docker
-    - attach_workspace:
-        at: .
-    - run: make promu
-    - run: promu crossbuild tarballs
-    - run: promu checksum .tarballs
-    - run: promu release .tarballs
-    - store_artifacts:
-        path: .tarballs
-        destination: releases
-    - run: ln -s .build/linux-amd64/prom2json prom2json
-    - run: make docker DOCKER_IMAGE_TAG=$CIRCLE_TAG
-    - run: make docker DOCKER_IMAGE_TAG=$CIRCLE_TAG DOCKER_REPO=quay.io/prometheus
-    - run: docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-    - run: docker login -u $QUAY_LOGIN -p $QUAY_PASSWORD quay.io
-    - run: |
-        if [[ "$CIRCLE_TAG" =~ ^v[0-9]+(\.[0-9]+){2}$ ]]; then
-          make docker-tag-latest DOCKER_IMAGE_TAG="$CIRCLE_TAG"
-          make docker-tag-latest DOCKER_IMAGE_TAG="$CIRCLE_TAG" DOCKER_REPO=quay.io/prometheus
-          make docker-publish DOCKER_IMAGE_TAG="latest"
-          make docker-publish DOCKER_IMAGE_TAG="latest" DOCKER_REPO=quay.io/prometheus
-        fi
-    - run: make docker-publish DOCKER_IMAGE_TAG="$CIRCLE_TAG"
-    - run: make docker-publish DOCKER_REPO=quay.io/prometheus DOCKER_IMAGE_TAG="$CIRCLE_TAG"
+    - prometheus/store_artifact:
+        file: prom2json
 
 workflows:
   version: 2
@@ -93,18 +26,21 @@ workflows:
         filters:
           tags:
             only: /.*/
-    - build:
+    - prometheus/build:
+        name: build
         filters:
           tags:
             only: /.*/
-    - docker_hub_master:
+    - prometheus/publish_master:
+        context: org-context
         requires:
         - test
         - build
         filters:
           branches:
             only: master
-    - docker_hub_release_tags:
+    - prometheus/publish_release:
+        context: org-context
         requires:
         - test
         - build
