Change circleci build image
Inspired by https://github.com/prometheus/pushgateway/pull/471

Signed-off-by: beorn7 <beorn@grafana.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,14 @@
 version: 2.1
 orbs:
   prometheus: prometheus/prometheus@0.16.0
+executors:
+  # Whenever the Go version is updated here, .promu.yml should also be updated.
+  golang:
+    docker:
+      - image: cimg/go:1.18
 jobs:
   test:
-    # Whenever the Go version is updated here, .promu.yml should also be
-    # updated.
-    docker:
-      - image: quay.io/prometheus/golang-builder:1.18-base
-    working_directory: /go/src/github.com/prometheus/prom2json
+    executor: golang
     steps:
       - prometheus/setup_environment
       - run: make
